# anyviewer

./: .gitignore  LICENSE  README.md  build_release.sh  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src-tauri/src/capture/: mod.rs  screen_capture.rs
src-tauri/src/codec/: mod.rs
src-tauri/src/config/: mod.rs
src-tauri/src/input/: enhanced_input.rs  mod.rs
src-tauri/src/metrics/: mod.rs
src-tauri/src/network/: client.rs  connection_manager.rs  connection_requests.rs  discovery.rs  mod.rs  p2p.rs  protocol.rs  relay_client.rs  server.rs
src-tauri/src/permissions/: mod.rs
src-tauri/src/security/: mod.rs
src-tauri/src/streaming/: compression.rs  frame_buffer.rs  mod.rs  screen_streamer.rs
src-tauri/src/testing/: mod.rs
src-tauri/src/utils/: file_transfer.rs  id_generator.rs  logging.rs  mod.rs  performance.rs  system.rs
src/components/: ConnectionRequestModal.tsx
src/components/Layout/: Header.tsx  Sidebar.tsx
src/hooks/: useTheme.ts
src/pages/: ClientSession.tsx  Dashboard.tsx  HostSession.tsx  Settings.tsx
