[package]
name = "anyviewer"
version = "0.1.0"
description = "A modern remote desktop application "
authors = ["Shepherd Umanah"]
license-file = "LICENSE"
repository = "https://github.com/shepherrrd/anyviewer"
default-run = "anyviewer"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = [ "window-unmaximize", "window-set-title", "window-show", "clipboard-all", "fs-all", "window-set-resizable", "window-set-fullscreen", "notification-all", "window-maximize", "window-hide", "os-all", "dialog-confirm", "window-close", "dialog-save", "dialog-ask", "shell-open", "path-all", "macos-private-api", "dialog-message", "dialog-open", "global-shortcut-all", "window-unminimize", "window-start-dragging", "window-minimize", "system-tray", "icon-png", "devtools"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.6", features = ["v4", "serde"] }
toml = "0.8"

# Screen capture dependencies
screenshots = "0.5"
image = "0.24"

# Input handling
enigo = "0.2"

# Networking
tokio-tungstenite = "0.20" 
futures-util = "0.3"
url = "2.4"
base64 = "0.22"

# Video processing (optional)
ffmpeg-next = { version = "6.0", optional = true }

# Security
aes-gcm = "0.10"
rand = "0.8"
rsa = "0.9"

# Logging
log = "0.4"
env_logger = "0.10"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Configuration
config = "0.13"
dirs = "5.0"

# System info
num_cpus = "1.16"
gethostname = "0.4"

# Compression
flate2 = "1.0"

# Serialization
bincode = "1.3"

# Network discovery
local-ip-address = "0.5"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
ffmpeg = ["ffmpeg-next"]

[[bin]]
name = "anyviewer"
path = "src/main.rs"
